piechart and table visualisation

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,10 @@
-.App {
-  text-align: center;
+.even-row {
+  background-color: #e8e8e8; /* Background color for even rows */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.odd-row {
+  background-color: #f4f4f4; /* Background color for odd rows */
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.blue-row {
+  background-color: #9bdbf9; /* Blue background color for the first row */
 }
